# accidental-benchmarks

./: LICENSE  README.md  pyproject.toml
benchmarks/: map_vs_python_loops.ipynb  tuple_vs_list.ipynb
src/: timing_funcs.py
